[package]
name = "dropandsum"
version = "0.3.0"
authors = ["dweb0"]
description = "Drop duplicates and sum by column(s)."
homepage = "https://github.com/dweb0/dropandsum"
repository = "https://github.com/dweb0/dropandsum"
readme = "README.md"
keywords = ["command-line"]
categories = ["command-line-interface"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dropandsum"
path = "src/main.rs"

[dependencies]
csv = "1.1.3"
clap = "2.33.0"
